# reef-opensea-fork-monorepo

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: Dockerfile  package.json
apps/api/src/: auth.ts  config.ts  dataset.ts  db.ts  deployer.ts  index.ts  indexer.ts  ipfs.ts  managed-drops.ts  runtime.ts  storage.ts
apps/web/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  styles.css  types.ts
apps/web/src/components/: AmbientEmptyState.tsx  MetricPanel.tsx  ProfileSetupModal.tsx  SectionHeader.tsx  TransactionProgressModal.tsx  UserAvatar.tsx
apps/web/src/components/create/: TraitBuilder.tsx
apps/web/src/components/discover/: DiscoverHeroPanel.tsx  DiscoverLeaderboardPanel.tsx  FeaturedCollectionCard.tsx
apps/web/src/components/profile/: ProfileActivityTab.tsx  ProfileCreatedTab.tsx  ProfileGalleriesTab.tsx  ProfileHero.tsx  ProfileItemsTab.tsx  ProfileListingsTab.tsx  ProfileOffersTab.tsx  ProfilePortfolioTab.tsx  ProfileTabBar.tsx  ProfileTokensTab.tsx  ProfileWorkspaceEmptyState.tsx
apps/web/src/components/ui/: ControlPrimitives.tsx
apps/web/src/lib/: identity.ts  presentation.ts
docs/: feature-regression-log.md  projectopensea-public-stack.md  route-map.md
scripts/: e2e-local-contract-check.mjs  smoke-routes.mjs  smoke-routes.sh
tools/revive-deployer/: Cargo.toml
tools/revive-deployer/src/: main.rs
